--- a/html/css/jquery-cflow.css
+++ b/html/css/jquery-cflow.css
@@ -6,8 +6,8 @@ h3 a{ text-decoration:none; color:#fff;}
 #overlay {  background: url('resources/trans.png') repeat-y; }
 #coverflowContainer { border: 5px solid #444444; width: 600px; margin-left: auto; margin-right: auto;}
 #coverflow    { width: auto; height: 350px; border: 0px solid red; }
-.sliderTrack  { margin-left:-100px;background:transparent url('imgs/sliderbg.jpg') no-repeat scroll left top; height:26px; position:relative; text-align:left; width:388px;}
-.sliderHandle { background:transparent url('imgs/knobbg.png') no-repeat scroll left top; cursor:pointer; height:26px; margin-left:30px; position:absolute; top:0px;width:27px;}
+.sliderTrack  { margin-left:-100px;background:transparent url('../coverflow/imgs/sliderbg.jpg') no-repeat scroll left top; height:26px; position:relative; text-align:left; width:388px;}
+.sliderHandle { background:transparent url('../coverflow/imgs/knobbg.png') no-repeat scroll left top; cursor:pointer; height:26px; margin-left:30px; position:absolute; top:0px;width:27px;}
 .coverflowCaptions { display: none;}
 .captionHolder {  font-size: 20px; margin-left:18px;margin-top:20px; color: white; text-shadow: #ccc 0.1em 0.1em 0.2em; font-family: Tahoma;  }
 
