--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -54,3 +54,15 @@
 
 	.ui-corner-all { -moz-border-radius: 6px; -webkit-border-radius: 6px;}
 
+.imageContain {
+ 	-moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border: groove #8e846b;
+} 
+
+.imageContain img {
+ 	width: 110px;
+} 
+.imageContain p {
+	text-align: center;
+}
