--- a/templates/listPatientsTable.vm
+++ b/templates/listPatientsTable.vm
@@ -1,7 +1,7 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="exampleOurVista">
-<thead><tr><th></th></tr></thead><tbody>
+<thead><tr><th></th><th></th></tr></thead><tbody>
 #foreach( $patient in $patients )
-    <tr class="gradeX"><td value="$patient"><span class="summary"><a href="#" class="details">$patient</a></span></td></tr>
+    <tr class="gradeX"><td value="$patient.id"><span class="summary"><a href="#" class="details">$patient.id</a></span></td><td value="$patient.name">$patient.name</td></tr>
 #end
 </tbody>
 </table>
