Add a params to the JSON for widget listing. To allow for widget specific parameters to be passed on. In this case, repository wdget, needs the repository name.

--- a/templates/listWidgets.vm
+++ b/templates/listWidgets.vm
@@ -1,6 +1,6 @@
 #foreach( $widget in $widgets )
     <div class="imageContain">
-    	<img src="$widget.image" alt="$widget.name" custom:url="$widget.clickURL" custom:type="$widget.type" custom:Id="$widget.id"></img>
+    	<img src="$widget.image" alt="$widget.name" custom:url="$widget.clickURL" custom:type="$widget.type" custom:Id="$widget.id" custom:params="$widget.params"></img>
     	<p>$widget.name</p>
     </div><br/>  
 #end
