--- a/templates/listPatientsBookmarksTable.vm
+++ b/templates/listPatientsBookmarksTable.vm
@@ -1,4 +1,5 @@
-<form id="bookmarkForm1"><input type="submit" value="save"></input><form>
+<form id="bookmarkForm$patient" name="bookmarkForm$patient">
+<input type="submit" value="save"></input>
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="bookmarks1">
 <thead><tr><th></th><th></th><th></th></tr></thead><tbody>
 #foreach( $bookmark in $bookmarks )
@@ -8,4 +9,5 @@
 #end
 </tbody>
 </table>
+</form>
 
