--- a/templates/listPatientsBookmarksTable.vm
+++ b/templates/listPatientsBookmarksTable.vm
@@ -1,7 +1,7 @@
 <form id="bookmarkForm$patient" name="bookmarkForm$patient">
 <input type="submit" value="save"></input>
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="bookmarks1">
-<thead><tr><th></th><th></th><th></th></tr></thead><tbody>
+<thead><tr><th>Bookmark</th><th>URL</th><th>Description</th></tr></thead><tbody>
 #foreach( $bookmark in $bookmarks )
     <tr class="gradeX"><td name="name" value="$bookmark.name">$bookmark.name</td>
     <td name="url" value="$bookmark.url">$bookmark.url</td>
