--- a/templates/listPatientMedsVert.vm
+++ b/templates/listPatientMedsVert.vm
@@ -1,10 +1,14 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="medications1">
-<thead><tr><th></th><th></th></tr></thead><tbody>
-<tr class="gradeX"><td>Manufacturer Info</td><td value="$medicationInformation.manufacturedMaterial.freeTextBrandName">$medicationInformation.manufacturedMaterial.freeTextBrandName</td></tr>
-<tr class="gradeX"><td>Patient Information</td><td value="$medicationInformation.patientInstructions">$medicationInformation.patientInstructions</td></tr>
-<tr class="gradeX"><td>Effective Time</td><td value="$effectiveTime">$effectiveTime</td></tr>
-<tr class="gradeX"><td>Dose</td><td value="$dose.value">$dose.value</td></tr>
-<tr class="gradeX"><td>Delivery Method</td><td value="$deliveryMethod.value">$deliveryMethod.value</td></tr>
-<tr class="gradeX"><td>Narrative</td><td value="$medicationInformation.narrative">$medicationInformation.narrative</td></tr>
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="medications$patient_id">
+<thead><tr><th></th><th></th><th></th></tr></thead><tbody>
+#foreach( $medication in $medications )
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Manufacturer Info</td><td value="$medication.medicationInformation.manufacturedMaterial.freeTextBrandName">$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Patient Information</td><td value="$medication.patientInstructions">$medication.patientInstructions</td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Effective Time</td><td value="$medication.effectiveTime.value">$medication.effectiveTime.value</td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Dose</td><td value="$medication.dose.value">$medication.dose.value</td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Delivery Method</td><td value="$medication.deliveryMethod.value">$medication.deliveryMethod.value</td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Narrative</td><td value="$medication.narrative">$medication.narrative</td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td></td><td></td></tr>
+<tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td></td><td></td></tr>
+#end
 </tbody>
 <table>
