--- a/templates/listPatientAllergies.vm
+++ b/templates/listPatientAllergies.vm
@@ -1,6 +1,7 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="allergies1">
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="allergies$patient_id">
 <thead><tr><th>Product</th><th>Reaction</th></tr></thead><tbody>
-<tr class="gradeX"><td>Product</td><td value="$product">$product</td></tr>
-<tr class="gradeX"><td>Reaction</td><td value="$reaction">$product</td></tr>
+#foreach( $allergy in $allergies) 
+<tr class="gradeX"><td value="$allergy.product.value">$allergy.product.value</td><td value="$allergy.reaction.value">$allergy.reaction.value</td></tr>
+#end
 </tbody>
 <table>
