Added tables to the medCafe database to track patient user association and schedules

--- a/templates/listInsertStatements.vm
+++ b/templates/listInsertStatements.vm
@@ -1,4 +1,4 @@
 #foreach( $patient in $patients )
-    insert into table patient (id, firstName, lastName, repository) values ( '$patient.id', '$patient.name',null,'$repository');
+    insert into patient (rep_id, first_name, last_name, repository) values ( '$patient.id', '$patient.name',null,'$repository');
     <br/>  
 #end
