--- a/templates/listSearchPatientsSelect.vm
+++ b/templates/listSearchPatientsSelect.vm
@@ -1,4 +1,5 @@
 <select id="patientsList">
+<option value="">--Select--</option>
 #foreach( $patient in $patients )
     <option value="$patient.first_name $patient.last_name">$patient.first_name $patient.last_name</option>
 #end
