--- a/templates/listPatientsBookmarksTable.vm
+++ b/templates/listPatientsBookmarksTable.vm
@@ -1,11 +1,19 @@
 <form id="bookmarkForm$patient" name="bookmarkForm$patient">
 <input type="submit" value="save"></input>
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="bookmarks1">
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="bookmarks$patient">
 <thead><tr><th>Bookmark</th><th>URL</th><th>Description</th></tr></thead><tbody>
+#if(!$bookmarks)
+	<tr class="gradeX"><td name="name" value=""></td>
+    <td name="url" value=""></td>
+    <td name="description" value=""></td></tr>
+#else
+
 #foreach( $bookmark in $bookmarks )
     <tr class="gradeX"><td name="name" value="$bookmark.name">$bookmark.name</td>
     <td name="url" value="$bookmark.url">$bookmark.url</td>
     <td name="description" value="$bookmark.description">$bookmark.description</td></tr>
+#end
+
 #end
 </tbody>
 </table>
