--- a/templates/listPatientsTable.vm
+++ b/templates/listPatientsTable.vm
@@ -1,4 +1,4 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="exampleOurVista">
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="example$repository">
 <thead><tr><th></th><th></th></tr></thead><tbody>
 #foreach( $patient in $patients )
     <tr class="gradeX"><td value="$patient.id"><span class="summary"><a href="#" class="details">$patient.id</a></span></td><td value="$patient.name">$patient.name</td></tr>
