--- a/templates/listPatientHistory.vm
+++ b/templates/listPatientHistory.vm
@@ -1,3 +1,3 @@
 #foreach(  $history in $patient_history )
-   <td>$history.title</td> 
+   <td>$history.title<div style="display: none;" class="ui-corner-all" id="detail">$history.note</div></td> 
 #end
