--- a/templates/listPatientHistory.vm
+++ b/templates/listPatientHistory.vm
@@ -1,4 +1,4 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="historySummary">
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
 <thead></thead><tbody>
 #foreach(  $history in $patient_history )
    <tr>
