--- a/templates/listPatientsBookmarksTable.vm
+++ b/templates/listPatientsBookmarksTable.vm
@@ -1,7 +1,8 @@
+#set( $count=0)
 <form id="bookmarkForm$patient" name="bookmarkForm$patient">
 <input type="submit" value="save"></input>
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="bookmarks$patient">
-<thead><tr><th>Bookmark</th><th>URL</th><th>Description</th></tr></thead><tbody>
+<thead><tr><th>Bookmark</th><th>URL</th><th>Description</th><th></th></tr></thead><tbody>
 #if(!$bookmarks)
 	<tr class="gradeX"><td name="name" value=""></td>
     <td name="url" value=""></td>
@@ -9,9 +10,16 @@
 #else
 
 #foreach( $bookmark in $bookmarks )
-    <tr class="gradeX"><td name="name" value="$bookmark.name">$bookmark.name</td>
-    <td name="url" value="$bookmark.url">$bookmark.url</td>
-    <td name="description" value="$bookmark.description">$bookmark.description</td></tr>
+    <tr class="gradeX"><td name="name" class="editInput" value="$bookmark.name">$bookmark.name</td>
+    <td name="url" value="$bookmark.url" class="editInput">$bookmark.url</td>
+    <td name="description" class="editInput" value="$bookmark.description">$bookmark.description</td>
+    <td><div>
+    <input class="addLink" id="AddLink$count" value="Add Link" type="button"></input>
+    <div id="bookmarkName$count" style="display:none;">$bookmark.name</div>
+    <div id="bookmarkUrl$count" style="display:none;">$bookmark.url</div>
+    </div></td>
+    </tr>
+    #set( $count = $count + 1 )
 #end
 
 #end
