--- a/templates/listImages.vm
+++ b/templates/listImages.vm
@@ -1,6 +1,7 @@
 #foreach( $image in $images )
     <div class="item">
-        <img class="content" src="<:prefix:>${image.thumb}"/>
+        #* <a class="item" href="<:prefix:>${image.param}"><img class="content" src="<:prefix:>${image.thumb}"/></a> *#
+        <img class="content" href="<:prefix:>${image.source}" src="<:prefix:>${image.thumb}"/>
         <div class="caption">${image.name}</div>
     </div>
 #end
