--- a/templates/listPatientHistory.vm
+++ b/templates/listPatientHistory.vm
@@ -1,14 +1,16 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
 <thead></thead><tbody>
-#foreach(  $history in $patient_history )
-   <tr>
-  	#if( $history.color )
-  		<td style="background-color:$history.color">$history.title
-  	#else
-		<td>$history.title
-   	#end
-   	<div style="display: none;" class="ui-corner-all" id="detail">$history.note</div></td> 
-   	</tr>
+#if ($patient_history)
+	#foreach(  $history in $patient_history )
+	   <tr>
+	  	#if( $history.color )
+	  		<td style="background-color:$history.color">$history.title
+	  	#else
+			<td>$history.title
+	   	#end
+	   	<div style="display: none;" class="ui-corner-all" id="detail">$history.note</div></td> 
+	   	</tr>
+	#end
 #end
 </tbody>
 <table>
