--- a/templates/listProblemList.vm
+++ b/templates/listProblemList.vm
@@ -1,14 +1,16 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
 <thead></thead><tbody>
-#foreach(  $problem in $patientProblem )
-   <tr>
-  	#if( $problem.color )
-  		<td style="background-color:$problem.color">$problem.title
-  	#else
-		<td>$problem.title
-   	#end
-   	<div style="display: none;" class="ui-corner-all" id="detail">$problem.note</div></td> 
-   	</tr>
+#if ($patientProblem)
+	#foreach(  $problem in $patientProblem )
+	   <tr>
+	  	#if( $problem.color )
+	  		<td style="background-color:$problem.color">$problem.title
+	  	#else
+			<td>$problem.title
+	   	#end
+	   	<div style="display: none;" class="ui-corner-all" id="detail">$problem.note</div></td> 
+	   	</tr>
+	#end
 #end
 </tbody>
 <table>
