--- a/templates/listPatientHistoryTable.vm
+++ b/templates/listPatientHistoryTable.vm
@@ -1,17 +1,19 @@
 #set( $count=0)
-#foreach( $history in $patient_history  )
-	
-	#if( $count == 0 )
-		<table cellpadding="0" cellspacing="0" border="0" class="display" id="history$history.patient_id">
-		<thead><tr><th>History Title</th><th>Note</th><th>Priority</th></tr></thead><tbody>
+#if ($patient_history)
+	#foreach( $history in $patient_history  )
+		
+		#if( $count == 0 )
+			<table cellpadding="0" cellspacing="0" border="0" class="display" id="history$history.patient_id">
+			<thead><tr><th>History Title</th><th>Note</th><th>Priority</th></tr></thead><tbody>
+		#end
+		<tr class="gradeX">
+		<td value="$history.title">$history.title</td>
+		<td value="$history.note">$history.note</td>
+		<td value="$history.priority">$history.priority</td>
+		</tr>
+		#set( $count = $count + 1 )
+		
 	#end
-	<tr class="gradeX">
-	<td value="$history.title">$history.title</td>
-	<td value="$history.note">$history.note</td>
-	<td value="$history.priority">$history.priority</td>
-	</tr>
-	#set( $count = $count + 1 )
-	
 #end
 </tbody>
 <table>
