--- a/templates/listProblemListTable.vm
+++ b/templates/listProblemListTable.vm
@@ -1,26 +1,28 @@
 #set( $count=0)
-#foreach(  $problemDetail in $problem )
-	#set($ActiveStatus="Active")
-	#set($InActiveStatus="Inactive")
-	#if( $count == 0 )
-		<table cellpadding="0" cellspacing="0" border="0" class="display" id="problemList$patient_id">
-		<thead><tr><th>Problem Name</th><th>Code</th><th>Date</th><th>Status</th></tr></thead><tbody>
-	#end
-
-	<tr class="gradeX"  >
-
-	<td  value="$problemDetail.problemName">$problemDetail.problemName</td>
-	<td value="$problemDetail.problemCode.code">$problemDetail.problemCode.code</td>
-	<td value="$problemDetail.problemDate">$problemDetail.problemDate.low.month/
-	$problemDetail.problemDate.low.day/$problemDetail.problemDate.low.year</td>
-	#if ( $problemDetail.narrative == "A")
-		<td  style = "background-color:yellow" value="$problemDetail.narrative">$ActiveStatus</td>
-	#else
-		<td style = "background-color:gray"value="$problemDetail.narrative">$InActiveStatus</td>	
-	#end
-	</tr>
-	#set( $count = $count + 1 )
+#if ($problem)
+	#foreach(  $problemDetail in $problem )
+		#set($ActiveStatus="Active")
+		#set($InActiveStatus="Inactive")
+		#if( $count == 0 )
+			<table cellpadding="0" cellspacing="0" border="0" class="display" id="problemList$patient_id">
+			<thead><tr><th>Problem Name</th><th>Code</th><th>Date</th><th>Status</th></tr></thead><tbody>
+		#end
 	
+		<tr class="gradeX"  >
+	
+		<td  value="$problemDetail.problemName">$problemDetail.problemName</td>
+		<td value="$problemDetail.problemCode.code">$problemDetail.problemCode.code</td>
+		<td value="$problemDetail.problemDate">$problemDetail.problemDate.low.month/
+		$problemDetail.problemDate.low.day/$problemDetail.problemDate.low.year</td>
+		#if ( $problemDetail.narrative == "A")
+			<td  style = "background-color:yellow" value="$problemDetail.narrative">$ActiveStatus</td>
+		#else
+			<td style = "background-color:gray"value="$problemDetail.narrative">$InActiveStatus</td>	
+		#end
+		</tr>
+		#set( $count = $count + 1 )
+		
+	#end
 #end
 </tbody>
 <table>
