--- a/templates/listProblemList.vm
+++ b/templates/listProblemList.vm
@@ -1,14 +1,13 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
 <thead></thead><tbody>
-#if ($patientProblem)
-	#foreach(  $problem in $patientProblem )
+#if ($problem)
+	#foreach(  $problemDetail in $problem )
 	   <tr>
-	  	#if( $problem.color )
-	  		<td style="background-color:$problem.color">$problem.title
-	  	#else
-			<td>$problem.title
-	   	#end
-	   	<div style="display: none;" class="ui-corner-all" id="detail">$problem.note</div></td> 
+	  	<td>$problemDetail.problemName</td>
+		<td>
+		<div class="ui-corner-all" id="detail">
+		$problemDetail.problemDate.low.month/$problemDetail.problemDate.low.day/$problemDetail.problemDate.low.year
+		</div></td> 
 	   	</tr>
 	#end
 #end
