--- a/templates/listPatientMedsVert.vm
+++ b/templates/listPatientMedsVert.vm
@@ -1,4 +1,4 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="medications$patient_id">
+<table cellpadding="0" cellspacing="0" border="0" class="display" id="Medications$patient_id">
 <thead><tr><th></th><th></th><th></th></tr></thead><tbody>
 #foreach( $medication in $medications )
 <tr class="gradeX"><td>$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td><td>Manufacturer Info</td><td value="$medication.medicationInformation.manufacturedMaterial.freeTextBrandName">$medication.medicationInformation.manufacturedMaterial.freeTextBrandName</td></tr>
