--- a/templates/listWidgets.vm
+++ b/templates/listWidgets.vm
@@ -1,6 +1,6 @@
 #foreach( $widget in $widgets )
     <div class="imageContain">
-    	<img src="$widget.image" alt="$widget.name" custom:url="$widget.clickUrl" custom:type="$widget.type" custom:Id="$widget.id" custom:params="$widget.params" custom:repository="$widget.repository"></img>
+    	<img src="$widget.image" alt="$widget.name" custom:url="$widget.clickUrl" custom:type="$widget.type" custom:Id="$widget.id" custom:params="$widget.params" custom:repository="$widget.repository" custom:script="$widget.script" custom:script_file="$widget.scriptFile" custom:template="$widget.template"></img>
     	<p>$widget.name</p>
     </div><br/>  
 #end
